--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
+    "daisyui": "^2.31.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
