--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "daisyui": "^2.31.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
