--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.0.11",
     "daisyui": "^2.31.0",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
