--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
