--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "next": "12.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0"
