--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.11",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "daisyui": "^2.31.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
