--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "next": "12.3.1",
+    "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
