--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.11",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "axios": "^1.3.4",
     "daisyui": "^2.31.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
