--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-responsive-carousel": "^3.2.23",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "sass": "^1.66.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
